--- a/index.html
+++ b/index.html
@@ -18,8 +18,39 @@
         </div>
         <div id='watchPartyText'>
             <h1>Watch parties made easy.</h1>
-            <p>Share movies, TV shows, and whatever you want with <br> friends online. Join millions of kasters today!</p>
+            <p id="watchPartyTextParagraph"> Share movies, TV shows, and whatever you want with <br> friends online. Join millions of kasters today!</p>
+        </div>
+        <div class="openKastParentParent">
+        <div class="openKastParent">
+            <div class="openKastButton">
+                <a href="/projects/staticLayout/blank.html" target="blank" ><h3>OPEN KAST</h3></a>
+            </div>
+        </div>
         </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <div class="sectionWhite">
+        <br>
+        <br>
+        <br>
+        <div id="featuredInText">
+        <h2> Featured in</h2>
+        </div>
+        <div class="featuredParent">
+            <ul class="featured">
+                <li id="featuredItems"><img src="assets/wired-logo.svg" ></li>
+                <li id="featuredItems"><img src="assets/nerdist-logo.svg" ></li>
+                <li id="featuredItems"><img src="assets/yahoo-finance-logo.svg" ></li>
+                <li id="featuredItems"><img src="assets/evening-standard-logo.svg" >
+                <li id="featuredItems"><img src="assets/bbc-logo.svg" ></li>
+                <li id="featuredItems"><img src="assets/daily-mail-logo.svg" ></li>
+        </div>
+        <p id="pullQuote">"Kast has probably never been more relevant - or necessary - than it is right now."</p>
+        <p id="yahooFinance">- Yahoo Finance</p>
+        <br>
+    </div>
+
 </body>
 </html>
