--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
 </head>
 <body>
     <header>
-        <nav>
-            
+        <nav id="nav-bar">
+            <div class="container">
+                <img src="assets/kast-logo-horizontal-color-white.svg" id="logo">
+                <ul>
+                    <li><a class="selected" href="/projects/staticLayout/blank.html">About</a></li>
+                    
+                    <li><a href="/projects/staticLayout/blank.html">Help</a></li>
+                    <li><a href="/projects/staticLayout/blank.html">Community</a></li>
+                    <li><a href="/projects/staticLayout/blank.html">Premium</a></li>
+                    <li><a href="/projects/staticLayout/blank.html">OPEN KAST</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <div class="watchParty">
@@ -23,7 +33,7 @@
         <div class="openKastParentParent">
         <div class="openKastParent">
             <div class="openKastButton">
-                <a href="/projects/staticLayout/blank.html" target="blank" ><h3>OPEN KAST</h3></a>
+                <a href="/projects/staticLayout/blank.html" target="blank"><h3>OPEN KAST</h3></a>
             </div>
         </div>
         </div>
