--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
                 <img src="assets/kast-logo-horizontal-color-white.svg" id="logo">
                 <ul>
                     <li><a class="selected" href="/projects/staticLayout/blank.html">About</a></li>
-                    
+
                     <li><a href="/projects/staticLayout/blank.html">Help</a></li>
                     <li><a href="/projects/staticLayout/blank.html">Community</a></li>
-                    <li><a href="/projects/staticLayout/blank.html">Premium</a></li>
-                    <li><a href="/projects/staticLayout/blank.html">OPEN KAST</a></li>
+                    <li id="nav-barPremium"><a href="/projects/staticLayout/blank.html"><span>Premium</span></a></li>
+                    <li id="nav-barOpenKast"><a href="/projects/staticLayout/blank.html"><span>OPEN KAST</span></a></li>
                 </ul>
             </div>
         </nav>
