--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/34359920be.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
@@ -12,10 +13,9 @@
             <div class="container">
                 <img src="assets/kast-logo-horizontal-color-white.svg" id="logo">
                 <ul>
-                    <li><a class="selected" href="/projects/staticLayout/blank.html">About</a></li>
-
-                    <li><a href="/projects/staticLayout/blank.html">Help</a></li>
-                    <li><a href="/projects/staticLayout/blank.html">Community</a></li>
+                    <li><a>About <i class="fas fa-angle-down"></i></a></li>
+                    <li><a>Help <i class="fas fa-angle-down"></i></a></li>
+                    <li><a>Community <i class="fas fa-angle-down"></i></a></li>
                     <li id="nav-barPremium"><a href="/projects/staticLayout/blank.html"><span>Premium</span></a></li>
                     <li id="nav-barOpenKast"><a href="/projects/staticLayout/blank.html"><span>OPEN KAST</span></a></li>
                 </ul>
@@ -24,7 +24,7 @@
     </header>
     <div class="watchParty">
         <div>
-        <img src="/projects/staticLayout/assets/laptop-table.png" id="watchPartyImage">
+        <img src="/assets/laptop-table.png" id="watchPartyImage">
         </div>
         <div id='watchPartyText'>
             <h1>Watch parties made easy.</h1>
