--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <div class="watchParty">
         <div>
-        <img src="/assets/laptop-table.png" id="watchPartyImage">
+        <img src="assets/laptop-table.png" id="watchPartyImage">
         </div>
         <div id='watchPartyText'>
             <h1>Watch parties made easy.</h1>
