--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="container">
                 <img src="assets/kast-logo-horizontal-color-white.svg" id="logo">
                 <ul>
-                    <li><a>About <i class="fas fa-angle-down"></i></a></li>
-                    <li><a>Help <i class="fas fa-angle-down"></i></a></li>
-                    <li><a>Community <i class="fas fa-angle-down"></i></a></li>
+                    <li><a href="#home">About <i class="fas fa-angle-down"></i></a></li>
+                    <li><a href="#home">Help <i class="fas fa-angle-down"></i></a></li>
+                    <li><a href="#home">Community <i class="fas fa-angle-down"></i></a></li>
                     <li id="nav-barPremium"><a href="/projects/staticLayout/blank.html"><span>Premium</span></a></li>
                     <li id="nav-barOpenKast"><a href="/projects/staticLayout/blank.html"><span>OPEN KAST</span></a></li>
                 </ul>
