--- a/index.html
+++ b/index.html
@@ -13,15 +13,43 @@
             <div class="container">
                 <img src="assets/kast-logo-horizontal-color-white.svg" id="logo">
                 <ul>
-                    <li><a href="#home">About <i class="fas fa-angle-down"></i></a></li>
+
+                    <li><a href="#home" class="about">About <i class="fas fa-angle-down"></i></a></li>
+
+                    <div class="dropdownAbout">
+                        <a href="#sectionThree">What is Kast?</i></a>
+                        <a href="blank.html">Kast TV</a>
+                        <a href="blank.html" target="blank">Blog <i class="fas fa-external-link-square-alt"></i></a>
+                        <a href="blank.html" target="blank">Press Releases <i class="fas fa-external-link-square-alt"></i></a>
+                        <a href="blank.html">Company</a>
+                    </div>
+
                     <li><a href="#home">Help <i class="fas fa-angle-down"></i></a></li>
+
+                    <div class="dropdownHelp">
+                        <a href="blank.html" target="blank">Contact Support <i class="fas fa-external-link-square-alt"></i></a>
+                        <a href="blank.html" target="blank">FAQ's <i class="fas fa-external-link-square-alt"></i></a>
+                        <a href="blank.html">Downloads</a>
+
+                    </div>
+
                     <li><a href="#home">Community <i class="fas fa-angle-down"></i></a></li>
+
+                    <div class="dropdownCommunity">
+                        <a href="blank.html">Community Guidelines</i></a>
+                        <a href="blank.html">Founders Hall of Fame</i></a>
+                        <a href="blank.html" target="blank">Shop Kast Swag <i class="fas fa-external-link-square-alt"></i></a>
+
+                    </div>
+
                     <li id="nav-barPremium"><a href="/projects/staticLayout/blank.html"><span>Premium</span></a></li>
                     <li id="nav-barOpenKast"><a href="/projects/staticLayout/blank.html"><span>OPEN KAST</span></a></li>
                 </ul>
             </div>
         </nav>
     </header>
+
+                    <!--SECTION ONE-->
     <div class="watchParty">
         <div>
         <img src="assets/laptop-table.svg" id="watchPartyImage">
@@ -38,6 +66,7 @@
         </div>
         </div>
     </div>
+                    <!--SECTION TWO-->
     <br>
     <br>
     <br>
@@ -60,7 +89,52 @@
         <p id="pullQuote">"Kast has probably never been more relevant - or necessary - than it is right now."</p>
         <p id="yahooFinance">- Yahoo Finance</p>
         <br>
+        <br><br>
     </div>
+                    <!--SECTION THREE-->
+    <div id="sectionThree">
+        <br>
+        <br>
+        <br>
+        <br>
+        <div id='watchPartyText'>
+            <h1>What is Kast?</h1>
+            <br>
+            <p id="watchPartyTextParagraph"> Looking for a place to watch movies, play, and hang out with friends?<br>Hop onto Kast and start sharing experiences real-time!<br><br>Up to 20 people can share their screen or camera and another 100 can<br>watch.</p>
+        </div>
+        <div class="openKastParentParent">
+            <div class="openKastParent">
+                <div class="openKastButton">
+                    <a href="/projects/staticLayout/blank.html" target="blank"><h3>OPEN KAST</h3></a>
+                </div>
+            </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
 
+    </div>
+    <div class="sectionWhite">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    </div>
 </body>
 </html>
